<resources>
    <string name="app_name">熊猫频道</string>
    <string name="zhibo">熊猫直播</string>
    <string name="gungun">滚滚视频</string>
    <string name="bobao">熊猫播报</string>
    <string name="zhongguo">直播中国</string>
    <string name="guanyu">熊猫频道是央视网创新理念、倾力打造的一个国际化新媒体产品，以直播大熊猫这一中国特有的珍稀动物为特色，以大熊猫相关事件性和日常移动直播为基础，以多终端、多平台为链接，希望向全球互联网用户展现真实、可爱的大熊猫及其保护情况，传递和平、友爱、公益的理念。现阶段开设了《精彩一刻》、《熊猫百科全说》、《熊猫那些事》等符合网络视频传播特点，及知识性和趣味性的一系列原创大熊猫点播节目。</string>


    <!--常见问题-->
    <string name="cj1">1.观看熊猫视频对手机网络有什么影响</string>
    <string name="cj1d">建议您在有WIFI的情况下观看视频，不建议您在2G网络下观看视频熊猫频道可以对您的网类型进行自动识别，当您在3G、4G情况下观看视频时，手机会自动提示您在使用数据流量环境下观看视频，可能产生高额费用，是否继续观看</string>

    <string name="cj2">2.如何清除缓存</string>
    <string name="cj2d">在"个人中心"页面里点击"设置",在设置页面选中"清除缓存"</string>

    <string name="cj3">3.如何进行版本更新</string>
    <string name="cj3d">新版本更新以后，用户首次启动客户端，会自动接收到升级提示，点击"升级"即可，IOS用户手机自动跳转到AppStore下载页面，Android用户手机自动后台下载更新。</string>

    <string name="cj4">4.启动或使用时闪退该怎么办</string>
    <string name="cj4d">登录或使用熊猫频道时出现闪退，可能是手机运行空间不足或软件数据包丢失导致，请您尝试重启手机或卸载软件后，下载安装最新版本使用</string>

    <string name="cj5">5.我有问题，如何反馈</string>
    <string name="cj5d">在"个人中心"页面点击"设置"，在设置页面里选择"用户反馈及帮助"。根据页面提示提交反馈，我们收到后将会及时处理。</string>




</resources>
