<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCCCCC">


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"

            android:background="@color/biz_audio_progress_first"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:background="@color/biz_audio_progress_first"
                android:layout_height="25dp"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:layout_gravity="center_vertical"
                android:text="@string/cj1"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="#000">

            </View>
            <TextView
                android:layout_width="match_parent"

                android:background="@color/biz_audio_progress_first"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:gravity="center_vertical"
                android:text="@string/cj1d"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"

            android:background="@color/biz_audio_progress_first"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:background="@color/biz_audio_progress_first"
                android:layout_height="25dp"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:layout_gravity="center_vertical"
                android:text="@string/cj2"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="#000">

            </View>
            <TextView
                android:layout_width="match_parent"

                android:background="@color/biz_audio_progress_first"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:gravity="center_vertical"
                android:text="@string/cj2d"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"

            android:background="@color/biz_audio_progress_first"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:background="@color/biz_audio_progress_first"
                android:layout_height="25dp"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:layout_gravity="center_vertical"
                android:text="@string/cj3"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="#000">

            </View>
            <TextView
                android:layout_width="match_parent"

                android:background="@color/biz_audio_progress_first"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:gravity="center_vertical"
                android:text="@string/cj3d"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"

            android:background="@color/biz_audio_progress_first"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:background="@color/biz_audio_progress_first"
                android:layout_height="25dp"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:layout_gravity="center_vertical"
                android:text="@string/cj4"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="#000">

            </View>
            <TextView
                android:layout_width="match_parent"

                android:background="@color/biz_audio_progress_first"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:gravity="center_vertical"
                android:text="@string/cj4d"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"

            android:background="@color/biz_audio_progress_first"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:background="@color/biz_audio_progress_first"
                android:layout_height="25dp"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:layout_gravity="center_vertical"
                android:text="@string/cj5"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="#000">

            </View>
            <TextView
                android:layout_width="match_parent"

                android:background="@color/biz_audio_progress_first"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:gravity="center_vertical"
                android:text="@string/cj5d"/>

        </LinearLayout>






    </LinearLayout>



</ScrollView>




</LinearLayout>